fix: ensure list-component has vertical scroll overflow

--- a/src/app/main/pages/accounts/views/principal/accounts.component.scss
+++ b/src/app/main/pages/accounts/views/principal/accounts.component.scss
@@ -49,6 +49,7 @@
         width: 100%;
         height: 100%;
         margin: 1rem 0;
+        overflow-y: scroll;
       }
     }
   }
